# ansib-server

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  config.example.yaml  manage.py  requirements.txt  setup.cfg  setup.py
ansib/server/: app.py  release.py
ansib/server/ansible/: executor.py  result_callback.py
ansib/server/api/v1/: __init__.py  ansible.py
ansib/server/cmd/: agent.py
ansib/server/common/: config.py  constants.py  context.py  exceptions.py  rest_plus.py
ansib/server/db/: repositories.py
ansib/server/models/: error.py
debian/: Dockerfile  Dockerfile_debian  ansib-server.default  ansib-server.dirs  ansib-server.install  ansib-server.postinst  ansib-server.postrm  ansib-server.prerm  ansib-server.service  changelog  control  copyright  rules
packaging/release/versionhelper/: version_helper.py
