[metadata]
name = agent
summary = Simple server for Ansible
description-file = README.md
author = Someone
classifier =
    Environment :: Operation system supported python
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages = ansible

[entry_points]

